fixed the drop down button in the owners dash

--- a/app/assets/stylesheets/pages/owners/_dash.scss
+++ b/app/assets/stylesheets/pages/owners/_dash.scss
@@ -65,17 +65,14 @@ a:link, a:visited, a:hover, a:active {
   color: #FF7E67;
 }
 
-// #c-col-item a{
-//     color: black;
-// }
+.manage-booking-item p {
+  padding: 0;
+  margin: 0;
+}
 
-// #c-col-item:hover {
-//   background-color: #FF7E67;
-//   color: white;
-// }
+.manage-booking-item:hover {
+  background-color: rgba(254,126,104,0.2);
+}
 
-
-
-//
 
 
