--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -4,12 +4,12 @@
   <h1>Upcoming appointment</h1>
 
 
-   <% @owner.pets.each do |pet| %>
-      <% pet.bookings.each do |booking| %>
-          <%= booking.date %>
-          <%= booking.time %>
-      <% end %>
-  <% end %>
+   <%# @owner.pets.each do |pet| %>
+      <%# pet.bookings.each do |booking| %>
+          <%#= booking.date %>
+          <%#= booking.time %>
+      <%# end %>
+  <%# end %>
  -->
 
 
@@ -62,7 +62,7 @@
           <!-- APPOINTMENTS -->
           <h3 style="color: #FF7E67; font-weight: 200; text-align: center">My upcoming appointments</h3>
 
-          <%# @user.pets.each do |pet| %>
+          <%# @owner.pets.each do |pet| %>
             <%# pet.bookings.each do |booking| %>
               <div class="d-flex one-booking-col">
                 <div class="one-booking-col-grey-bar" style="background-color: lightgray; width: 1%">
@@ -84,9 +84,21 @@
                   <button class="btn dropdown-toggle one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
 
                   <div class="dropdown-menu dropdown-menu-right booking-manage-action" aria-labelledby="dropdownMenuButton">
-                    <%= link_to "Pet health profile", class: "dropdown-item manage-booking-item" %>
-                    <%= link_to "Change booking", class: "dropdown-item manage-booking-item"%>
-                    <%= link_to "Cancel booking", class: "dropdown-item manage-booking-item"%>
+                    <%= link_to do %>
+                      <span class="dropdown-item manage-booking-item"><p>Pet health profile</p></span>
+                    <% end %>
+
+                    <%= link_to do %>
+                      <span class="dropdown-item manage-booking-item"><p>Change booking</p></span>
+                    <% end %>
+
+                    <%= link_to do %>
+                      <span class="dropdown-item manage-booking-item"><p>Cancel booking</p></span>
+                    <% end %>
+
+
+                    <%#= link_to "Change booking", class: "dropdown-item manage-booking-item"%>
+                    <%#= link_to "Cancel booking", class: "dropdown-item manage-booking-item"%>
                     <!-- <a class="dropdown-item c-col-item"></a> -->
                     <!-- <a class="dropdown-item c-col-item" href="#">Change booking</a> -->
                     <!-- <a class="dropdown-item c-col-item" href="#">Cancel booking</a> -->
@@ -99,9 +111,9 @@
 
           <!-- REMINDERS -->
 
-          <h3 style="margin-top: 20px; color: #FF7E67; font-weight: 200; text-align: center">Reminders</h3>
+          <h3 style="margin-top: 20px; margin-bottom: 10px; color: #FF7E67; font-weight: 200; text-align: center">Reminders</h3>
           <div style="background-color: rgba(254,126,104,0.2); padding-top: 5px">
-            <p style="color: grey; padding-left: 10px;">You currently have no reminders. To set one, please go to your profile page</p>
+            <p style="color: grey; padding-left: 10px;">You currently have no reminders.</p>
           </div>
 
         </div>
