finalized booking form design

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,18 +1,31 @@
-<div class="booking-banner d-flex justify-content-center">
+
+<div class="booking-background d-flex justify-content-center">
   <div class="booking-form-container">
-<p>Appointment booking</p>
+<h4>Appointment booking</h4>
 
 <div class = "booking-form d-flex ml-3 mr-2">
     <div class="form-inputs-booking d-flex">
 <%= simple_form_for [@clinic, @booking] do |f| %>
 <%= f.input :vet, collection: @clinic.vets %>
+<%= f.input :reason_for_visit,
+    collection: [
+      "Skin conditions",
+"Stomach issues",
+"Ear infections",
+"Eye conditions",
+"Pain",
+"Growths",
+"Vaccination",
+"Urinary tract infections",
+"Allergies"]
+     %>
 <%=f.input :date %>
 <%=f.input :time%>
 
-<div class="form-actions-booking d-flex justify-content-around">
+<div class="booking-buttons d-flex justify-content-around mt-5">
    <!-- <button type="button" onclick="calculatePrice()">Calculate Price</button> -->
-    <%= f.button :submit, "Book"%>
-    <%= link_to "Back",owners_dash_path(@owner), class: "btn btn-lg btn-light"  %>
+    <%= f.button :submit, "Book",:class => 'submit_class'%>
+    <%= link_to "Back",owners_dash_path(@owner), class: "btn_back"  %>
 
   </div>
     <% end %>
