--- a/app/assets/stylesheets/pages/bookings/_new.scss
+++ b/app/assets/stylesheets/pages/bookings/_new.scss
@@ -1,17 +1,64 @@
+.booking-background {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+  display: flex;
+  background-image: image-url("paws.png");
+  height: 100vh;
+}
 
   .booking-form-container {
+    padding-left: 20px;
+    padding-right: 20px;
   margin-top: 50px;
   margin-bottom: 50px;
   background-color: $submit-button-green;
   height-max: 300px;
   border-radius:3px;
-  
-   h2 {
-    color: $submit-button-orange;
-    text-align: center;
-    margin: 15px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-  
+   h4 {
+     color:$submit-button-orange;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    text-align:center;
+    margin-top:20px;
+
    }
   }
+
+  .form-inputs-booking {
+      color:white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    margin-top: 10px;
+
+  }
+
+.booking-buttons {
+margin-top: 10px;
+
+.submit_class {
+  color:white;
+  background-color: $submit-button-orange;
+  padding: 8px 13px;
+  border: 1px solid $submit-button-orange;
+  border-radius: 5px;
+  width: 80px;
+  text-align:center;
+  margin-right: 5px;
+
+
+
+}
+.btn_back {
+  color:$submit-button-orange;
+  background-color: white;
+  padding: 8px 13px;
+  border: 1px solid $submit-button-orange;
+  border-radius: 5px;
+  width: 80px;
+  text-align:center;
+  margin-left: 5px;
+
+
+}
+}
