--- a/app/assets/stylesheets/pages/clinics/_show.scss
+++ b/app/assets/stylesheets/pages/clinics/_show.scss
@@ -54,7 +54,7 @@
   color: white;
   padding: 5px 30px;
   margin-bottom: 10px;
-  display: table-cell;
+  //display: table-cell;
 }
 
 ///////////////////////////////
