--- a/app/assets/stylesheets/pages/owners/_dash.scss
+++ b/app/assets/stylesheets/pages/owners/_dash.scss
@@ -7,10 +7,12 @@
   justify-content: space-around;
 }
 
-.test-one-clinic-card {
+.one-clinic-card {
   display: flex;
+  justify-content: center;
+  //direction: ltr;
   width: 400px;
-  height: auto;
+  height: 200px;
   margin: 10px;
   background-color: #006A71;
   border-radius: 10px;
@@ -18,27 +20,46 @@
   box-shadow: 1px 1px 30px 1px rgba(0, 0, 0, 0.2);
 }
 
-.test-one-clinic-card:hover {
+.one-clinic-card:hover {
   box-shadow: 8px 28px 50px rgba(39, 44, 49, 0.07),
     1px 6px 12px rgba(39, 44, 49, 0.04);
   transform: translate3D(0, 1px, 1rem) scale(1.02);
   transition: all 0.5s ease;
 }
 
-.test-clinic-logo img {
+.one-clinic-logo img {
   height: 150px;
   width: 150px;
   border: 15px solid #ECF4F3;
   border-radius: 50%;
+  margin: 0;
 }
 
-.test-clinic-logo,
-.test-one-clinic-card-description {
+.one-clinic-logo {
+  //border: 3px solid red;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  text-align: right;
+  direction: ltr;
+  color: white;
+  margin: 0;
+  width: 200px;
+  height: 200px;
+
+}
+
+
+.one-clinic-card-description {
+  //border: 1px solid white;
   padding: 20px;
   text-align: right;
-  //direction: ltr;
+  direction: rtl;
   color: white;
+  width: 200px;
+  height: 200px;
 }
+
 
 
 a:link, a:visited, a:hover, a:active {
