--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -4,15 +4,17 @@
 
 <div class = "booking-form d-flex ml-3 mr-2">
     <div class="form-inputs-booking d-flex">
-<%= simple_form_for [@clinic, @booking] do |f| %>
-<%= f.input :vet, collection: @clinic.vets %>
-<%=f.input :date %>
-<%=f.input :time%>
+      <%= simple_form_for [@clinic, @booking] do |f| %>
+      <%= f.input :vet, input_html: {value: "#{@vet.first_name} #{@vet.last_name}"} , disabled: true   %>
+      <%=f.input :vet_id, :as => :hidden, :input_html => { :value => @vet.id }%>
+      <%= f.input :pet_id, collection: current_user.pets %>
+      <%=f.input :date %>
+      <%=f.input :time%>
 
-<div class="form-actions-booking d-flex justify-content-around">
-   <!-- <button type="button" onclick="calculatePrice()">Calculate Price</button> -->
-    <%= f.button :submit, "Book"%>
-    <%= link_to "Back",owners_dash_path(@owner), class: "btn btn-lg btn-light"  %>
+      <div class="form-actions-booking d-flex justify-content-around">
+        <!-- <button type="button" onclick="calculatePrice()">Calculate Price</button> -->
+        <%= f.button :submit, "Book"%>
+        <%= link_to "Back",owners_dash_path(@owner), class: "btn btn-lg btn-light"  %>
 
   </div>
     <% end %>
