made more final changes

--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -14,7 +14,7 @@
             <%= link_to clinic_path(clinic) do %>
             <div class="one-clinic-card">
               <div class="one-clinic-card-description">
-                <h4 class="col-6 clinic-card-description" style="font-weight: 400"> <%= clinic.name %> </h4>
+                <p class="col-6 clinic-card-description" style="font-weight: 400; padding-bottom: 0;"> <%= clinic.name %> </p>
                 <p class="clinic-card-description" style="padding: 10px 0; border-top: 1px solid #ECF4F3; border-bottom: 1px solid #ECF4F3; "> <%= clinic.location %> </p>
                 <p class="clinic-card-description">⭐️ ⭐️ ⭐️ ⭐️</p>
               </div>
