--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,14 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-   <%= link_to owner_path(current_user)   do  %>
-                      <span class="logo-button"><p>VetBook</p></span>
-                    <% end %>
-<!--   <%= link_to "VetBook", class: "navbar-brand"%>
- -->
+  <% if current_user.type == "Owner" %>
+    <%= link_to owners_dash_path(current_user) do %>
+      <span class="logo-button"><p>VetBook</p></span>
+    <% end %>
+  <% else %>
+    <%= link_to clinics_dash_path(current_user)   do  %>
+      <span class="logo-button"><p>VetBook</p></span>
+    <% end %>
+  <% end %>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
