--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -42,7 +42,7 @@
 
   <div class="col-9">
     <div class="container" >
-        <% 2.times do %>
+      <% @owner.pets.each do |pet| %>
         <div class="one-pet-card">
 
          <div class="col d-flex justify-content-start align-items-center">
@@ -51,19 +51,19 @@
 
           <div class="col card-pet-infos">
            <div class="d-flex row justify-content-starts align-items-left mt-2">
-              <p class="pet-text">Name:</p>
+              <p class="pet-text">Name: <%= pet.name %> </p>
             </div>
 
             <div class="d-flex row justify-content-start align-items-left">
-              <p class="pet-text">Age:</p>
+              <p class="pet-text">DOB: <%= pet.dob %> </p>
             </div>
 
             <div class=" d-flex row justify-content-start align-items-left">
-              <p class="pet-text">Breed:</p>
+              <p class="pet-text">Breed: <%= pet.breed %> </p>
             </div>
 
             <div class="wrapper" style="text-align: center;">
-             <%= link_to "View full pet records",owner_pet_path(@owner), class: "btn button-view-record"  %>
+             <%= link_to "View full pet records",owner_pet_path(pet), class: "btn button-view-record"  %>
             </div>
          </div>
       </div>
