updated pet show

--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -63,7 +63,7 @@
             </div>
 
             <div class="wrapper" style="text-align: center;">
-             <%= link_to "View full pet records",owner_pet_path(pet), class: "btn button-view-record"  %>
+             <%= link_to "View full pet records",owner_pet_path(@owner,pet), class: "btn button-view-record"  %>
             </div>
          </div>
       </div>
