changes to forms

--- a/app/assets/stylesheets/pages/bookings/_new.scss
+++ b/app/assets/stylesheets/pages/bookings/_new.scss
@@ -7,11 +7,16 @@
   height: 100vh;
 }
 
+
+.form-inputs-booking {
+  margin-top: 0;
+}
+
   .booking-form-container {
     padding-left: 20px;
     padding-right: 20px;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   background-color: $submit-button-green;
   height-max: 300px;
   border-radius:3px;
