--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,91 +17,105 @@
       <%= link_to "Sign Up", new_user_registration_path, class: "btn-veterinarian"  %>
       <%= link_to "Log In", new_user_session_path, class: "btn-petowner"  %>
     </div>
+
   </div>
 </div>
 </div>
 
-<div class= " master-box d-flex justify-content-center"  >
-  <div class="container">
+<div class= "part2-homepage master-box d-flex justify-content-center"  >
+  <!-- <div class="container"> -->
 
 
-    <div class="row align-items-center justify-content-center">
-      <div class="box col-12 mt-3 mb-3 pt-2 pb-2">
-        <h2>What we do</h2>
+    <div class="col-6 d-flex justify-content-center align-items-center ">
+      <div class="box mt-3 pt-2 pb-2 align-items-center">
+        <h2>How VetBook benefit you</h2>
       </div>
+    </div>
 
-      <div class="box1 col-5 mt-2 pt-2 pb-2 d-flex align-items-center">
+  <div class="col-6 d-flex  align-items-center justify-content-center">
+    <div class="container dotted-div">
+
+    <div class="card-product box-1">
+      <!-- <div class="box2 col-3 mt-2 pt-2 d-flex align-items-center"> -->
         <div class="container">
-          <div class= "row d-flex justify-content-center">
-            <%= image_tag('calendar-line.png', height: '45', width: '45') %>
+          <div class= " d-flex justify-content-center">
+             <%= image_tag('schedule.png', height: '45', width: '45') %>
           </div>
-          <div class= "row d-flex justify-content-center">
+
+          <div class= "d-flex justify-content-center">
             <h5>Appointments</h5>
           </div>
-          <div class= "row d-flex justify-content-center">
+
+          <div class= "d-flex justify-content-center">
             <p>Easily make appointments with your nearest vet</p>
           </div>
         </div>
       </div>
 
-      <div class="box2 col-5 mt-2 pt-2 pb-2 d-flex align-items-center">
+
+
+
+    <div class="card-product box-1">
+      <!-- <div class="box2 col-3 mt-2 pt-2 d-flex align-items-center"> -->
         <div class="container">
-          <div class= "row d-flex justify-content-center">
-            <%= image_tag('cloud-data-download.png', height: '45', width: '45') %>
+          <div class= " d-flex justify-content-center">
+            <%= image_tag('download', height: '45', width: '45') %>
           </div>
 
-          <div class= "row d-flex justify-content-center">
+          <div class= "d-flex justify-content-center">
             <h5>Medical records</h5>
           </div>
 
-          <div class= "row d-flex justify-content-center">
-            <p>Keep detailed track of your pet's medical history</p>
+          <div class= "d-flex justify-content-center">
+            <p>Keep detailed track of your <br>pet's medical history</p>
           </div>
         </div>
       </div>
 
-
-      <div class="box3 col-5 pb-2 d-flex align-items-center">
+    <div class="card-product box-1">
        <div class="container">
-        <div class= "row d-flex justify-content-center">
-          <%= image_tag('notification-alert.png', height: '45', width: '45') %>
+        <div class= " d-flex justify-content-center">
+          <%= image_tag('reminder.png', height: '45', width: '45') %>
         </div>
 
         <div class= "row d-flex justify-content-center">
           <h5>Reminders</h5>
         </div>
 
-        <div class= "row d-flex justify-content-center">
-         <p>Never forget an upcoming vaccination </p>
+        <div class= "row d-flex justify-content-center align-items-center">
+         <p>Never forget an upcoming<br> vaccination </p>
        </div>
      </div>
    </div>
 
-   <div class="box4 col-5 pb-2 d-flex align-items-center">
-    <div class="container">
+    <div class="card-product box-1">
+       <div class="container">
+        <div class= " d-flex justify-content-center">
+          <%= image_tag('map.png', height: '45', width: '45') %>
+        </div>
 
-      <div class= "row d-flex justify-content-center">
-       <%= image_tag('multiple-11.png', height: '45', width: '45') %>
+        <div class= "row d-flex justify-content-center">
+          <h5>View vets nearby</h5>
+        </div>
+
+        <div class= "row d-flex justify-content-center align-items-center">
+         <p>Discover clinics within your area with their vet details</p>
+       </div>
      </div>
+   </div>
 
-     <div class= "row d-flex justify-content-center">
-      <h5>Advertise your clinic</h5>
-    </div>
 
-    <div class= "row d-flex justify-content-center">
-      <p>Reach a wider audience of pet owners</p>
-    </div>
-  </div>
-</div>
 
 </div>
-
 </div>
+<!-- </div> -->
+
 </div>
 
 
 
-<div class ="container-customer">
+
+<div class ="container-customer flex-wrapper">
 
  <div class="customer-box col-12 mt-2 pt-4 pb-2">
   <h2>What pet owners think</h2>
@@ -128,6 +142,7 @@
           </div>
           <div class="review row d-flex justify-content-center tp-2 pl-2 pr-1">
             <p>“ The only app <br>reminding me vaccinations”</p>
+            <!-- <p>⭐️⭐️⭐️⭐️⭐️</p> -->
             <p>Alicia B.- pet owner</p>
           </div>
         </div>
@@ -140,6 +155,7 @@
         </div>
         <div class="review row d-flex justify-content-center tp-2 pl-2 pr-1">
           <p>“ Awesomeeeee <br> awesome and once more awesome!!”</p>
+          <!-- <p>⭐️⭐️⭐️⭐️⭐️</p> -->
           <p>Jessica S.- pet owner</p>
         </div>
       </div>
@@ -160,6 +176,7 @@
     </div>
     <div class="review row d-flex justify-content-center tp-2 pl-2 pr-1">
       <p>“ Fabulous idea <br>to have handy app for pets”</p>
+      <!-- <p>⭐️⭐️⭐️⭐️⭐️</p> -->
       <p>Teresa B.- pet owner</p>
     </div>
   </div>
@@ -172,6 +189,7 @@
   </div>
   <div class="review row d-flex justify-content-center tp-2 pl-2 pr-1">
     <p>“ Ive been volunteer <br> to test this app, and I love it!!”</p>
+    <!-- <p>⭐️⭐️⭐️⭐️⭐️</p> -->
     <p>Janice S.- pet owner</p>
   </div>
 </div>
@@ -189,6 +207,7 @@
           </div>
           <div class="review row d-flex justify-content-center tp-2 pl-2 pr-1">
             <p>“ Nice to have<br>app as reminder. May use now!”</p>
+            <!-- <p>⭐️⭐️⭐️⭐️⭐️</p> -->
             <p>Dereck S.- pet owner</p>
           </div>
         </div>
@@ -201,6 +220,7 @@
         </div>
         <div class="review row d-flex justify-content-center tp-2 pl-2 pr-1">
           <p>“ Love it <br> coudlnt have better interface!!”</p>
+          <!-- <p>⭐️⭐️⭐️⭐️⭐️</p> -->
           <p>Jack N.- pet owner</p>
         </div>
       </div>
@@ -219,24 +239,25 @@
 
 </div>
 
+<div>
 <div class="row" style="background-color:white;">
-  <div class="col-3 logos">
+  <div class="col-4 logos">
    <h4>Vetbook<br>partnered clinics</h4>
   </div>
 
-  <div class="col-2">
+  <div class="col-2 d-flex justify-content-center">
     <%= image_tag "clinic1.png", :class => 'avatar-logo' %>
   </div>
 
-   <div class="col-2">
+   <div class="col-2 d-flex justify-content-center">
     <%= image_tag "clinic2.png", :class => 'avatar-logo' %>
   </div>
 
-   <div class="col-2">
+   <div class="col-2 d-flex justify-content-center">
     <%= image_tag "clinic3.png", :class => 'avatar-logo' %>
   </div>
 
-   <div class="col-2">
+   <div class="col-2 d-flex justify-content-center">
     <%= image_tag "clinic4.png", :class => 'avatar-logo' %>
   </div>
 
@@ -258,6 +279,8 @@
       </div>
     </div>
 
+</div>
+</div>
 </div>
 
 <!-- </div> -->
