--- a/app/assets/stylesheets/pages/pets/_show.scss
+++ b/app/assets/stylesheets/pages/pets/_show.scss
@@ -23,29 +23,37 @@ h4 {
 
 .medicalrecord {
 text-align: left;
-
+padding-top: 0px;
 h4 {
    color: $submit-button-orange;
    font-weight: 400;
   font-family: 'Montserrat', sans-serif;
-  padding: 20px 20px;
-
+  padding: 10px 10px;
+  }
 }
 
-
-}
-
-.info {
+.info-written {
+  overflow: hidden;
+  // background: white;
+  //  background-color: #fff5ea;
+  // box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  align-items: center;
  p {
   color:$submit-button-green;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  margin-top: 15px;
 }
 }
 
+
+
+
 .avatar-doggy {
   margin: 5px 5px;
-  width: 220px;
+  width: 200px;
   height: 200px;
    border-radius: 50%;
   border: 2px solid white;
@@ -85,6 +93,7 @@ h4 {
   padding: 10px 15px;
   border: 1px solid $submit-button-orange;
   border-radius: 5px;
+  text-align:center;
 }
 
 .btn-record:hover {
@@ -122,6 +131,7 @@ overflow: auto;
 .one-diagnosis-a {
   height: 100px;
   overflow: auto;
+
 }
 
 .one-diagnosis-b {
@@ -132,6 +142,9 @@ overflow: auto;
 .one-vaccination-a {
   height: 100px;
   overflow: auto;
+  // border-radius: 5px 0 0 5px;
+  border-radius: 15px 50px 30px 5px;
+
 }
 
 .one-vaccination-b {
