--- a/app/views/clinics/dash.html.erb
+++ b/app/views/clinics/dash.html.erb
@@ -37,7 +37,7 @@
       Manage
       </button>
       <ul class="dropdown-menu one-booking-manage-action" aria-labelledby="dropdownMenuButton">
-      <%= link_to '#' do %>
+      <%= link_to new_owner_pet_health_record_path(booking.pet.user, booking.pet) do %>
         <li class="dropdown-item" >Submit health report</li>
         <% end %>
         <!-- <a class="dropdown-item" href="#">Pet health profile</a> -->
